--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="hola">
 
-  <div class="h-screen d-flex flex-column">
+  <div class="h-screen d-flex flex-column" id="gridd">
     
     <!-- Incluir el header -->
     <div id="header"></div>
@@ -213,7 +213,7 @@
         </div>
         <div class="gallery-item">
           <a href="27.html">
-            <img src="gifs/27-NO_PIXEL_WAPUF.gif" alt="Portfolio Image 27" id="gif27">
+            <img src="gifs/27-PIXEL_WAPUF.gif" alt="Portfolio Image 27" id="gif27">
             <audio id="audio27" preload="auto">
               <source src="gifs/27-crow-39377.mp3" type="audio/mp3">
               Your browser does not support the audio element.
@@ -331,7 +331,7 @@
       { imgId: 'gif24', pixelSrc: 'gifs/24-PIXEL JUNIOR.gif',             textSrc: 'gifs/24-NO PIXEL JUNIOR.gif',   audioId: 'audio24' },
       { imgId: 'gif25', pixelSrc: 'gifs/25-PIXEL I LOVE BCN.gif',         textSrc: 'gifs/25-NO PIXEL I LOVE BCN.gif', audioId: 'audio25' },
       { imgId: 'gif26', pixelSrc: 'gifs/26-PIXEL MAREMOTO.gif',           textSrc: 'gifs/26-NO PIXEL MAREMOTO.gif', audioId: 'audio26' },
-      { imgId: 'gif27', pixelSrc: 'gifs/27-PIXEL_WAPUF.gif',           textSrc: 'gifs/27-NO_PIXEL_WAPUF.gif', audioId: 'audio26' },
+      { imgId: 'gif27', pixelSrc: 'gifs/27-PIXEL_WAPUF.gif',              textSrc: 'gifs/27-NO_PIXEL_WAPUF.gif', audioId: 'audio26' },
 
     ];
   
