--- a/about.html
+++ b/about.html
@@ -8,11 +8,11 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="h-screen d-flex flex-column">
+  <div class="h-screen d-flex flex-column" id="divGeneral">
 
     <div id="header"></div>
 
-    <main class="flex-grow-1">      
+    <main class="flex-grow-1" id="aboutMain">      
       <section class="about-section">
         <div class="background-gif"></div>
         <div class="content-overlay" id="about1">
