--- a/about.html
+++ b/about.html
@@ -21,8 +21,7 @@
               KUMO better known as Pedro Triviño is a visual storyteller, crafting narratives through images that exist only in the world of thoughts. For him, every project is an opportunity to create something truly special, ensuring strong concepts and visual narratives that deeply connect and inspire. He draws inspiration from all forms of art and the small details of life, blending concepts and aesthetics to create pieces that expand and illuminate the unique essence of each project.
             </p>
             <p class="p-p">
-              CREATIVE DIRECTION, PRODUCTION, AND AUDIOVISUAL DIRECTION FOR ARTISTS, BRANDS, AND PROJECTS MADE WITH LOVE ❤
-            </p>
+              CREATIVE DIRECTION, AUDIOVISUAL DIRECTION & PRODUCTION FOR ARTISTS AND BRANDS MADE WITH LOVE ❤            </p>
           </div>
         </div>
       </section>
