--- a/index.html
+++ b/index.html
@@ -183,10 +183,18 @@
             </audio>
           </a>
         </div>
-
         <div class="gallery-item">
           <a href="22.html">
             <img src="gifs/22-PIXEL 4 CATAS.gif" alt="Portfolio Image 22" id="gif22">
+            <audio id="audio22" preload="auto">
+              <source src="gifs/22-bird-whistling-in-the-forest-215441.mp3" type="audio/mp3">
+              Your browser does not support the audio element.
+            </audio>
+          </a>
+        </div>
+        <div class="gallery-item">
+          <a href="28.html">
+            <img src="gifs/PIXEL EL PRAT.gif" alt="Portfolio Image 22" id="gif22">
             <audio id="audio22" preload="auto">
               <source src="gifs/22-bird-whistling-in-the-forest-215441.mp3" type="audio/mp3">
               Your browser does not support the audio element.
@@ -332,6 +340,7 @@
       { imgId: 'gif25', pixelSrc: 'gifs/25-PIXEL I LOVE BCN.gif',         textSrc: 'gifs/25-NO PIXEL I LOVE BCN.gif', audioId: 'audio25' },
       { imgId: 'gif26', pixelSrc: 'gifs/26-PIXEL MAREMOTO.gif',           textSrc: 'gifs/26-NO PIXEL MAREMOTO.gif', audioId: 'audio26' },
       { imgId: 'gif27', pixelSrc: 'gifs/27-PIXEL_WAPUF.gif',              textSrc: 'gifs/27-NO_PIXEL_WAPUF.gif', audioId: 'audio26' },
+      { imgId: 'gif28', pixelSrc: 'gifs/PIXEL EL PRAT.gif',              textSrc: 'gifs/NO PIXEL EL PRAT.gif', audioId: 'audio26' },
 
     ];
   
