--- a/index.html
+++ b/index.html
@@ -202,6 +202,15 @@
           </a>
         </div>
         <div class="gallery-item">
+          <a href="28.html">
+            <img src="gifs/PIXE FW 2019.gif" alt="Portfolio Image 22" id="gif22">
+            <audio id="audio22" preload="auto">
+              <source src="gifs/22-bird-whistling-in-the-forest-215441.mp3" type="audio/mp3">
+              Your browser does not support the audio element.
+            </audio>
+          </a>
+        </div>
+        <div class="gallery-item">
           <a href="24.html">
             <img src="gifs/24-PIXEL JUNIOR.gif" alt="Portfolio Image 24" id="gif24">
             <audio id="audio24" preload="auto">
@@ -341,6 +350,7 @@
       { imgId: 'gif26', pixelSrc: 'gifs/26-PIXEL MAREMOTO.gif',           textSrc: 'gifs/26-NO PIXEL MAREMOTO.gif', audioId: 'audio26' },
       { imgId: 'gif27', pixelSrc: 'gifs/27-PIXEL_WAPUF.gif',              textSrc: 'gifs/27-NO_PIXEL_WAPUF.gif', audioId: 'audio26' },
       { imgId: 'gif28', pixelSrc: 'gifs/PIXEL EL PRAT.gif',              textSrc: 'gifs/NO PIXEL EL PRAT.gif', audioId: 'audio26' },
+      { imgId: 'gif20', pixelSrc: 'gifs/PIXE FW 2019.gif',              textSrc: 'gifs/NO PIXEL FW 2019.gif', audioId: 'audio26' },
 
     ];
   
