cambio imgs proy

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         </div>
         <div class="gallery-item">
           <a href="28.html">
-            <img src="gifs/PIXEL EL PRAT.gif" alt="Portfolio Image 22" id="gif22">
+            <img src="gifs/PIXEL EL PRAT.gif" alt="Portfolio Image 22" id="gif29">
             <audio id="audio22" preload="auto">
               <source src="gifs/22-bird-whistling-in-the-forest-215441.mp3" type="audio/mp3">
               Your browser does not support the audio element.
@@ -202,8 +202,17 @@
           </a>
         </div>
         <div class="gallery-item">
-          <a href="28.html">
-            <img src="gifs/PIXE FW 2019.gif" alt="Portfolio Image 22" id="gif22">
+          <a href="29.html">
+            <img src="gifs/PIXE FW 2019.gif" alt="Portfolio Image 22" id="gif30">
+            <audio id="audio22" preload="auto">
+              <source src="gifs/22-bird-whistling-in-the-forest-215441.mp3" type="audio/mp3">
+              Your browser does not support the audio element.
+            </audio>
+          </a>
+        </div>
+        <div class="gallery-item">
+          <a href="30.html">
+            <img src="gifs/PIXEL HERMANIOS.gif" alt="Portfolio Image 22" id="gif31">
             <audio id="audio22" preload="auto">
               <source src="gifs/22-bird-whistling-in-the-forest-215441.mp3" type="audio/mp3">
               Your browser does not support the audio element.
@@ -349,8 +358,9 @@
       { imgId: 'gif25', pixelSrc: 'gifs/25-PIXEL I LOVE BCN.gif',         textSrc: 'gifs/25-NO PIXEL I LOVE BCN.gif', audioId: 'audio25' },
       { imgId: 'gif26', pixelSrc: 'gifs/26-PIXEL MAREMOTO.gif',           textSrc: 'gifs/26-NO PIXEL MAREMOTO.gif', audioId: 'audio26' },
       { imgId: 'gif27', pixelSrc: 'gifs/27-PIXEL_WAPUF.gif',              textSrc: 'gifs/27-NO_PIXEL_WAPUF.gif', audioId: 'audio26' },
-      { imgId: 'gif28', pixelSrc: 'gifs/PIXEL EL PRAT.gif',              textSrc: 'gifs/NO PIXEL EL PRAT.gif', audioId: 'audio26' },
-      { imgId: 'gif20', pixelSrc: 'gifs/PIXE FW 2019.gif',              textSrc: 'gifs/NO PIXEL FW 2019.gif', audioId: 'audio26' },
+      { imgId: 'gif29', pixelSrc: 'gifs/PIXEL EL PRAT.gif',               textSrc: 'gifs/NO PIXEL EL PRAT.gif', audioId: 'audio26' },
+      { imgId: 'gif30', pixelSrc: 'gifs/PIXE FW 2019.gif',                textSrc: 'gifs/NO PIXE FW 2019.gif', audioId: 'audio26' },
+      { imgId: 'gif31', pixelSrc: 'gifs/PIXEL HERMANIOS.gif',             textSrc: 'gifs/NO PIXEL HERMANIOS.gif', audioId: 'audio26' },
 
     ];
   
