--- a/about.html
+++ b/about.html
@@ -7,28 +7,24 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <style>
-    
     html, body {
       margin: 0;
       padding: 0;
       overflow-x: hidden;
     }
-   
     .container-about {
       position: relative; 
-      width: 70vw;
-      margin-top: 5rem;
-      padding: 0;
       width: 100%;
-      margin-top:2rem;
+      margin-top: 10rem;
+      padding: 0;
     }
     .bg_gif {
       position: absolute;
-      top: 0;
-      left: 110%;
+      top: -3%;
+      left: 78%;
       transform: translateX(-50%) rotate(10deg);
-      width: 70vw;
-      max-width: 1800px;  
+      width: 200vw;
+      max-width: 2200px;  
       aspect-ratio: 16 / 9; 
       background-image: url('gifs/Giff_about.gif');
       background-repeat: no-repeat;
@@ -37,64 +33,55 @@
       z-index: -5;
       pointer-events: none;
     }
+    .text-block {
+      width: 70%;
+      margin: 0;
+      padding: 0;
+    }
     .parrafo {
-      font-size: 5rem; 
-      line-height: 4.5rem;
+      font-size: 6rem; 
+      line-height: 5.1rem;
+      letter-spacing: 0.1rem;
       font-family: 'OTNeueMontreal-MediumSqueezed', sans-serif;
       color: red;
       margin: 0;
     }
     @media (max-width: 768px) {
-      html, body {
-        width: 100%;
-        height: 100%;
-        overflow-x: hidden;
-        margin: 0;
-        padding: 0;
-      }
       .container-about {
         min-height: 70vh;
         margin-top: 5rem;
       }
-
-      .bg_gif{
+      .bg_gif {
         height: 100%;
         width: 80%;
         top: -5.5rem;
         left: 11.5rem;
       }
-
-      .parrafo{
-       
+      .parrafo {
         font-size: 2.4rem; 
         line-height: 2.2rem; 
-        letter-spacing: 0rem; 
-
       }
-
-      .content-overlay {
-        position: relative; 
-        top: 0;
-        left: 0;
+      .text-block {
         width: 100%;
-        z-index: 1;
+        margin: 0;
       }
-          }
+    }
   </style>
 </head>
 <body>
   <div id="header"></div>
-
-  <!-- Contenedor principal que engloba texto y GIF -->
+  
   <div class="container-about">
     <div class="bg_gif"></div>
-    <p class="parrafo">
-      KUMO better known as Pedro Triviño is a visual storyteller, crafting narratives through images that exist only in the world of thoughts. For him, every project is an opportunity to create something truly special, ensuring strong concepts and visual narratives that deeply connect and inspire. He draws inspiration from all forms of art and the small details of life, blending concepts and aesthetics to create pieces that expand and illuminate the unique essence of each project.
-    </p>
-    <p class="parrafo">
-       <br>
-      CREATIVE DIRECTION, AUDIOVISUAL DIRECTION & PRODUCTION FOR ARTISTS AND BRANDS MADE WITH LOVE ❤
-    </p>
+    <div class="text-block">
+      <p class="parrafo">
+        KUMO better known as Pedro Triviño is a visual storyteller, crafting narratives through images that exist only in the world of thoughts. For him, every project is an opportunity to create something truly special, ensuring strong concepts and visual narratives that deeply connect and inspire. He draws inspiration from all forms of art and the small details of life, blending concepts and aesthetics to create pieces that expand and illuminate the unique essence of each project.
+      </p>
+      <p class="parrafo">
+        <br>
+        CREATIVE DIRECTION, AUDIOVISUAL DIRECTION & PRODUCTION FOR ARTISTS AND BRANDS MADE WITH LOVE ❤
+      </p>
+    </div>
   </div>
 
   <div id="footer"></div>
